--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="module" src="js/index.js"></script>
     </body>
 </html>
