Added GameScene and TitleScene Added Win Logic that goes back to TitleScene
Missing: Refactors

--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,12 @@
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/plugins/spine/dist/SpinePluginDebug.js"></script>
         <script src="https://raw.githubusercontent.com/rexrainbow/phaser3-rex-notes/master/dist/rexvirtualjoystickplugin.min.js"></script>
-        <title>Hello World</title>
+        <title>SpineBoy Platformer</title>
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="module" src="js/index.js"></script>
+        <script type="module" src="js/scene/TitleScene.js"></script>
+        <script type="module" src="js/scene/GameScene.js"></script>
     </body>
 </html>
