--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,8 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/plugins/spine/dist/SpinePluginDebug.js"></script>
-        <script src="https://raw.githubusercontent.com/rexrainbow/phaser3-rex-notes/master/dist/rexvirtualjoystickplugin.min.js"></script>
+        <script src="/www/node_modules/phaser/dist/phaser.js"></script>
+        <script src="/www/node_modules/phaser/plugins/spine/dist/SpinePlugin.js"></script>
         <title>SpineBoy Platformer</title>
     </head>
     <body>
@@ -15,5 +14,9 @@
         <script type="module" src="js/index.js"></script>
         <script type="module" src="js/scene/TitleScene.js"></script>
         <script type="module" src="js/scene/GameScene.js"></script>
+        <script type="module" src="js/helper/Player.js"></script>
+        <script type="module" src="js/helper/Stars.js"></script>
+        <script type="module" src="js/helper/ButtonHud.js"></script>
+        <script type="module" src="js/helper/animations/SpineAnimations.js"></script>
     </body>
 </html>
