--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <script src="/www/node_modules/phaser/dist/phaser.js"></script>
-        <script src="/www/node_modules/phaser/plugins/spine/dist/SpinePlugin.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/plugins/spine/dist/SpinePluginDebug.js"></script>
         <title>SpineBoy Platformer</title>
     </head>
     <body>
